2008-02-27  Jeremy Cribb <jcribb@email.unc.edu>
	- evt_gui.m: fixed bug where frames per second was misreported.
	- evt_gui.fig: same.
	- TODO.txt: updated.
	
2008-02-26  Jeremy Cribb <jcribb@email.unc.edu>
	- evt_gui.m: fixed slider bug when deleting 1 of remaining 2 tracks.

2008-02-26  Jeremy Cribb <jcribb@email.unc.edu>
	- evt_gui.m: removed unused plot types.
	- evt_gui.fig: same.

2008-02-26  Jeremy Cribb <jcribb@email.unc.edu>
	evt_gui.m: added plot types.
	evt_gui.fig: same.
	TODO.txt: added. 

2008-01-07  Jeremy Cribb <jcribb@email.unc.edu>
	evt_gui.m: aesthetic changes to code layout.

2007-11-15  Jeremy Cribb <jcribb@email.unc.edu>
	evt_gui.m: 
		- overhauled the auxilary plot interface.  
		- can now plot individual MSD curves and/or the mean MSD.  
    - can now plot viscoelastic profiles (G and eta, complex) as functions of frequency via the Generalized Stokes-Einstein Relation (GSER).
    - added the pole_locating function for driven bead experiments.
    - fixed bug that delayed updates to plots.  plots update as expected now.

2007-10-09  Jeremy Cribb <jcribb@email.unc.edu>
	evt_gui.m: made small adjustments at matlab's suggestion.  

2007-08-30  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: added MSD plotting functionality.
	* evt_gui.fig: same. 
	
2007-04-05  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: added axis labels to XY figure.

2007-04-05  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: lots of changes.
			- figures opened by evt_gui now close automatically upon exit.
			- renamed RTfigure to AUXillary figure to contain non-imperative data, such as radial displacement or trackers vs frame#.
			- disabled controls until data has loaded (avoids annoying but understandable matlab errors).
			- trimming data now works in pixel and micron length scales.
			- selecting closest dataset now works in pixel and micron length scales.
			- exporting a single bead to the base workspace now works.