@@ -9,3 +9,4 @@
 - grayed out fps should be updated via tstamps automatically
 - config buttons for plot_type
 - status line
+- extract "pruning" functions from evt_gui... extract "pruning" functions from load_video_tracking... place into "prune_video_tracking" function.
